# RepoBrain

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PROJECT_STRENGTHS_WEAKNESSES.md  README.md  RELEASE_v1.2.0.md  docker-compose.yml  implementation_plan.md  mypy.ini  pyproject.toml  pytest.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  python-package.yml  release.yml
docker/: entrypoint.sh
docs/: backlog.md  cli.md  contracts.md  gemini-fallback-handoff.md  mcp.md  production-readiness.md  release-checklist.md  run.md
docs-for-repobrain/: README.md  index.html  package-lock.json  package.json
docs-for-repobrain/docs/: backlog.md  cli.md  config.md  contracts.md  demo-script.md  docker.md  github-growth-content-kit.md  install.md  model-provider-roadmap.md  production-gates-v1.md  production-readiness.md  release-checklist.md  release-prep-2026-04-20.md  roadmap.md  run.md
docs-for-repobrain/src/: App.css  App.tsx  content.ts  index.css
examples/: first-look.md
integrations/agoragentic_v1/: README.md
prompts/: repobrain-strategy-review-prompt.md
src/repobrain/: __init__.py  cleanup.py  cli.py  file_context.py  first_look.py  models.py  prompt_pack.py  provider_setup.py  release.py  review.py  ux.py  web.py  workspace.py
tests/: conftest.py  test_cleanup.py  test_cli.py  test_config.py  test_engine.py  test_mcp_server.py  test_providers.py  test_release.py  test_scanner.py  test_web.py  test_workspace.py
testsuite/: test_models.py  test_prompt_pack.py  test_provider_base.py  test_web.py  test_workspace.py
webapp/: build.mjs  package-lock.json  package.json  tsconfig.json
webapp/src/: App.tsx  index.html  main.tsx  (+1 more)
(+24 files in other folders)
